tests/ui/unboxed-closures/unboxed-closure-sugar-default.stderr
error[E0277]: the trait bound `dyn Foo<(isize,), isize, Output = ()>: Eq<dyn Foo<(isize,), Output = ()>>` is not satisfied
  --> $DIR/unboxed-closure-sugar-default.rs:21:10
   |
LL |     eq::<dyn Foo<(isize,), isize, Output=()>, dyn Foo(isize)>();
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Eq<dyn Foo<(isize,), Output = ()>>` is not implemented for `dyn Foo<(isize,), isize, Output = ()>`
   |
note: required by a bound in `eq`
  --> $DIR/unboxed-closure-sugar-default.rs:14:40
   |
LL | fn eq<A: ?Sized,B: ?Sized>() where A : Eq<B> { }
   |                                        ^^^^^ required by this bound in `eq`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
